[package]
name = "lean2md"
version = "0.2.1"
edition = "2021"
description = "Tool to convert Lean files to Markdown with special features for documentation"
license = "MIT"
repository = "https://github.com/fosterfarrell9/lean2md"
keywords = ["lean", "markdown", "documentation", "converter"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "lean2md"
path = "src/lib.rs"

[[bin]]
name = "lean2md"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.3.0"  # For creating temp directories in tests
pretty_assertions = "1.4.0"  # For better diff in test failures

[dependencies]
